JavaScript form validation change

--- a/UsersAnimalVet/WebContent/index.html
+++ b/UsersAnimalVet/WebContent/index.html
@@ -7,14 +7,30 @@
 <body>
 	<h1 style="color:blue" style="font-size:40px">We are new open animal vet</h1>
 	<p style="font-size:25px">You can register your pet by type in the following info</p>
-	<form action = "addPetServlet" method="post">
+<script>
+function checkForm(form)
+{
+  if(!form.terms.checked) {
+    alert("Please indicate that you check the check box!");
+    form.terms.focus();
+    return false;
+  }
+  return true;
+}
+
+</script>
+	
+	
+	<form action = "addPetServlet" method="post" onsubmit = "return checkForm(this);">	
 	Type: <input type ="text" name = "type">
 	Name: <input type = "text" name = "name">
 	Owner: <input type = "text" name = "owner">
+	<p><input type="checkbox" name="terms"> All informations typed correctly</p>
 	<input type = "submit" value="Add Information in system">
 	</form> <br />
 	<a href = "viewAllPetsServlet">View the complete list</a>
 	<a href="viewAllListsServlet">View all pet lists</a> <br />
 	<a href="addPetsForListServlet">Create a new list</a>
+	
 </body>
 </html>
